# agent-state-machine-py

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/agent_state_machine/: __init__.py
tests/: test_state_machine.py
